feat: Add diff-friendly EXPLORE result projections
- Refactor UseCaseResult from class to Java record
- Add getDiffableContent() method with default implementation
- Add DiffableContentProvider interface for custom projections
- Enhance @UseCase annotation with maxDiffableLines and diffableContentMaxLineLength
- Create ResultProjection record and ResultProjectionBuilder
- Integrate with EmpiricalBaseline, BaselineWriter, and ExperimentExtension
- Add result projection section to YAML output

This enables side-by-side diff comparison of EXPLORE specs to see
actual value differences between configurations.